<resources>
    <string name="app_name">FluxBank</string>
    <string name="digite_seu_cpf">Digite seu cpf:</string>
    <string name="cpf_hint">___.___.___-__</string>
    <string name="logo_do_fluxbank">Logo do FluxBank</string>
    <string name="bot_o_de_avan_ar">Botão de avançar</string>
    <string name="digite_sua_senha">Digite sua senha:</string>
    <string name="ativar_biometria">Ativar biometria</string>
    <string name="titlefaq">FAQ</string>
    <string name="subtitleFaq">Aqui você pode sanar tudos as suas dúvidas</string>
    <string name="searchFaq">Prcure ajuda</string>
    <string name="subtitle2Faq">Aqui você encontra as principais duvidas dos nosso cliente.
    Sinta-se a vontade para pesquisar e caso não encontre, mande sua dúvida que nosso time  irá te ajudar a sanar suas dúvidas</string>
    <string name="question1">Como abrir uma conta no banco digital?</string>
    <string name="answer1">Assim que abrir o aplicativo, clique em cadastra-se</string>
    <string name="question2">É seguro usar o banco digital?</string>
    <string name="answer2">Sim, somos um banco que utiliza todas as tecnologias para manter seu dinheiro seguro.</string>
    <string name="question3">Comno fazer transferências (TED,DOC,PIX)?</string>
    <string name="answer3">Apos logar no aplicativo, você consegue encontrar na tela as opções de PIX e trasnferência, </string>
    <string name="question4">Esqueci a minha senha, o que fazer?</string>
    <string name="answer4">Na tela incial, selecione esqueci minha senha </string>
    <string name="btnSendQuestion">Envie sua pergunta</string>
    <string name="titleextrato">Extrato</string>
    <string name="subtitleextrato">Histórico</string>
    <string name="dataextrato">OUT 15</string>
    <string name="searchExtrato">Procure transferência</string>
    <string name="transfertype1">PIX Enviado!</string>
    <string name="transfertype2">PIX Recebido!</string>
    <string name="trnasfertype3">Dinheiro Guuardado!</string>
    <string name="transfertype4">Dinheiro Resgatado!</string>
    <string name="transfertype5">Conta paga!</string>
    <string name="transfertype6">Trasnferência Enviada!</string>
    <string name="transfertype7">Transferência Recebida!</string>
    <string name="transfervalue1">-R$ 7,00</string>
    <string name="transfervalue2">+R$ 200,00</string>
    <string name="trasnfervalue3">-R$ 599,99</string>
    <string name="transfervalue4">-R$ 100,00</string>
    <string name="transfercomment1">Lanchonete</string>
    <string name="transfercomment2">Laura Alessio</string>
    <string name="transfercomment3">Faculdade </string>
    <string name="trsnsfercomment4">Deposito no Cofrinho</string>

</resources>