<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_login">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/logo_do_fluxbank"/>

    <TextView
        android:id="@+id/txtCpfLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digite_seu_cpf"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"/>

    <EditText
        android:id="@+id/edtCpf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="000.000.000-00"
        android:textColorHint="#8DFFFFFF"
        android:textColor="@android:color/white"
        android:background="@null"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/txtCpfLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="cpf"
        android:inputType="number"/>

    <View
        android:id="@+id/underline"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/edtCpf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/round_button_background"
        android:src="@drawable/ic_arrow_right"
        app:tint="@android:color/white"
        android:layout_margin="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/bot_o_de_avan_ar"/>
</androidx.constraintlayout.widget.ConstraintLayout>